FIX: IE grid layout issue on user's own activity page

--- a/app/assets/stylesheets/common/base/user.scss
+++ b/app/assets/stylesheets/common/base/user.scss
@@ -61,7 +61,7 @@
   .user-content,
   .spinner {
     -ms-grid-row: 2;
-    -ms-grid-column: 1;
+    -ms-grid-column: 2;
     -ms-grid-column-span: 2;
   }
   .user-secondary-navigation + .user-content {
